# BlitzMail

./: .gitignore  ASSIMP_IMPLEMENTATION_SUMMARY.md  ASSIMP_INTEGRATION.md  ASSIMP_INTEGRATION_SUMMARY.md  ASSIMP_REMOVAL_SUMMARY.md  ASSIMP_SETUP.md  BUILD_INSTRUCTIONS.md  BlitzMail  CMakeLists.txt  COMPILATION_SUCCESS_SUMMARY.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LIB3DS_INTEGRATION.md  MODEL_LOADING_GUIDE.md  Makefile  ModelLoader.h  OpenGL3DTemplate.cpp  OpenGL3DTemplate.vcxproj  Project Proposal Template.docx  Project Proposal.docx  QUICK_START.md  README.md  SUMMARY.md  VERIFICATION_CHECKLIST.md  VISUAL_STUDIO_ASSIMP_SETUP.md  setup_assimp.sh  test_assimp.cpp  test_model_loading.cpp
OpenGL3DTemplate/Debug/: OpenGL3DTemplate.exe.recipe  vc143.idb
OpenGL3DTemplate/Debug/OpenGL3DTemplate.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGL3DTemplate.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
_codeql_build_dir/: Makefile
models/6od9waw1za0w-fence/fence/: cerca.mtl
